load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "Repositories",
    srcs = glob(
        ["*.swift"],
        allow_empty = True,
    ),
    deps = [
    ],
)

# Uncomment if documentation generation is needed
# load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
# load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_package")
#
# swift_package(
#     name = "docc_documentation",
#     srcs = glob([
#         "**/*.swift",
#         "**/*.docc/**",
#     ] , allow_empty = True),
#     deps = ["//Sources/Repositories"],
#    visibility = #    visibility = # = ["//visibility:public"] 
    # visibility = ["//visibility:public"],
)
