load("//bazel:swift_rules.bzl", "umbra_swift_library")

umbra_swift_library(
    name = "Repositories",
    srcs = glob(
        [
            "*.swift",
            "**/*.swift",
        ],
        allow_empty = False,
        exclude = [
            "**/Tests/**",
            "**/*Test.swift",
            "**/*.generated.swift",
        ],
        exclude_directories = 1,
    ),
    deps = [
        "//Sources/SecurityInterfaces",
        "//Sources/SecurityTypes",
        "//Sources/UmbraErrors",
        "//Sources/UmbraErrors/Core:UmbraErrorsCore",
        "//Sources/UmbraLogging",
    ],
)

# Uncomment if documentation generation is needed
# load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
# load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
# load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_package")
# load("@rules_swift_package_manager//swiftpkg:defs.bzl", "swift_package")
# swift_package(
#     name = "docc_documentation"
#     srcs = glob([
#     srcs = glob([
#         "**/*.swift"
#         "**/*.docc/**"
#     ])
#     ])
# deps = [
#     # Dependencies would go here
# deps = [
#     # Dependencies would go here
# deps = [
#     # Dependencies would go here
# )
